--- a/Big_Data_with_PySpark.ipynb
+++ b/Big_Data_with_PySpark.ipynb
@@ -6,7 +6,7 @@
       "name": "Big Data with PySpark.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNxWB3NYgml1khD9dwy15kk",
+      "authorship_tag": "ABX9TyOBup+2C1GBsFxqIigUYxow",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,6 +79,26 @@
         "# Show the head\n",
         "flights.show()\n",
         "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JH55OT6fyiJO",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Course 2: Manipulating Data**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "atfjHIaYytIE",
+        "colab_type": "text"
+      },
+      "source": [
         "# Add duration_hrs\n",
         "flights = flights.withColumn('duration_hrs',flights.air_time/60)\n",
         "\n",
@@ -107,7 +127,129 @@
         "flights.filter(flights.carrier == \"DL\").filter(flights.origin == 'SEA').groupBy().avg(\"air_time\").show()\n",
         "\n",
         "# Total hours in the air\n",
-        "flights.withColumn(\"duration_hrs\", flights.air_time/60).groupBy().sum(\"duration_hrs\").show()\n"
+        "flights.withColumn(\"duration_hrs\", flights.air_time/60).groupBy().sum(\"duration_hrs\").show()\n",
+        "\n",
+        "# Import pyspark.sql.functions as F\n",
+        "import pyspark.sql.functions as F\n",
+        "\n",
+        "# Standard deviation of departure delay\n",
+        "by_month_dest.agg(F.stddev('dep_delay')).show()\n",
+        "\n",
+        "# Rename the faa column\n",
+        "airports = airports.withColumnRenamed('faa','dest')\n",
+        "\n",
+        "# Join the DataFrames\n",
+        "flights_with_airports = flights.join(airports,on = 'dest', how = 'leftouter')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2ERfB7HKy3Q5",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Course 3: Machine Learning Pipeline**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "drLqqHr-y3qR",
+        "colab_type": "text"
+      },
+      "source": [
+        "At the core of the pyspark.ml module are the Transformer and Estimator classes. Almost every other class in the module behaves similarly to these two basic classes.\n",
+        "\n",
+        "Transformer classes have a .transform() method that takes a DataFrame and returns a new DataFrame; usually the original one with a new column appended. For example, you might use the class Bucketizer to create discrete bins from a continuous feature or the class PCA to reduce the dimensionality of your dataset using principal component analysis.\n",
+        "\n",
+        "Estimator classes all implement a .fit() method. These methods also take a DataFrame, but instead of returning another DataFrame they return a model object. This can be something like a StringIndexerModel for including categorical data saved as strings in your models, or a RandomForestModel that uses the random forest algorithm for classification or regression.\n",
+        "\n",
+        "#### Spark only handles numeric data. That means all of the columns in your DataFrame must be either integers or decimals\n",
+        "\n",
+        "It's important to note that .cast() works on columns, while .withColumn() works on DataFrames. The only argument you need to pass to .cast() is the kind of value you want to create, in string form. For example, to create integers, you'll pass the argument \"integer\" and for decimal numbers you'll use \"double\".\n",
+        "\n",
+        "dataframe = dataframe.withColumn(\"col\", dataframe.col.cast(\"new_type\")) \\\\\n",
+        "model_data = model_data.withColumn(\"month\", model_data.month.cast('integer'))\n",
+        "\n",
+        "Convert to an integer \\\\\n",
+        "model_data = model_data.withColumn(\"label\", model_data.is_late.cast('integer'))\n",
+        "\n",
+        "Create a StringIndexer \\\\\n",
+        "carr_indexer = StringIndexer(inputCol= 'carrier',outputCol='carrier_index')\n",
+        "\n",
+        "Create a OneHotEncoder \\\\\n",
+        "carr_encoder = OneHotEncoder(inputCol='carrier_index',outputCol='carrier_fact')\n",
+        "\n",
+        "Make a VectorAssembler \\\\\n",
+        "vec_assembler = VectorAssembler(inputCols=['month','air_time','carrier_fact','dest_fact','plane_age'], outputCol='features')\n",
+        "\n",
+        "Import Pipeline \\\\\n",
+        "from pyspark.ml import Pipeline\n",
+        "\n",
+        "Make the pipeline \\\\\n",
+        "flights_pipe = Pipeline(stages=[dest_indexer,dest_encoder,carr_indexer,carr_encoder,vec_assembler])\n",
+        "\n",
+        "Fit and transform the data \\\\\n",
+        "piped_data = flights_pipe.fit(model_data).transform(model_data)\n",
+        "\n",
+        "Split the data into training and test sets \\\\\n",
+        "training, test = piped_data.randomSplit([0.6,0.4])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8NgxrCHRNswJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Course 4: Model tuning and selection**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TKaQluTkNz9B",
+        "colab_type": "text"
+      },
+      "source": [
+        "Import LogisticRegression \\\\\n",
+        "from pyspark.ml.classification import LogisticRegression\n",
+        "\n",
+        "Create a LogisticRegression Estimator \\\\\n",
+        "lr = LogisticRegression()\n",
+        "\n",
+        "Import the evaluation submodule \\\\\n",
+        "import pyspark.ml.evaluation as evals\n",
+        "\n",
+        "Create a BinaryClassificationEvaluator \\\\\n",
+        "evaluator = BinaryClassificationEvaluator(metricName = 'areaUnderROC')\n",
+        "\n",
+        "Import the tuning submodule \\\\\n",
+        "import pyspark.ml.tuning as tune\n",
+        "\n",
+        "Create the parameter grid \\\\\n",
+        "grid = tune.ParamGridBuilder()\n",
+        "\n",
+        "Add the hyperparameter \\\\\n",
+        "grid = grid.addGrid(lr.regParam, np.arange(0, .1, .01))\n",
+        "grid = grid.addGrid(lr.elasticNetParam, [0,1])\n",
+        "\n",
+        "Build the grid \\\\\n",
+        "grid = grid.build()\n",
+        "\n",
+        "Create the CrossValidator \\\\\n",
+        "cv = tune.CrossValidator(estimator=lr,\n",
+        "               estimatorParamMaps=grid,\n",
+        "               evaluator=evaluator\n",
+        "               )\n",
+        "\n",
+        "Use the model to predict the test set \\\\\n",
+        "test_results = best_lr.transform(test)\n",
+        "\n",
+        "Evaluate the predictions \\\\\n",
+        "print(evaluator.evaluate(test_results))"
       ]
     },
     {
