--- a/Big_Data_with_PySpark.ipynb
+++ b/Big_Data_with_PySpark.ipynb
@@ -6,7 +6,7 @@
       "name": "Big Data with PySpark.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOBup+2C1GBsFxqIigUYxow",
+      "authorship_tag": "ABX9TyPlXEkCpNg+Peh3icEumSEB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -250,6 +250,121 @@
         "\n",
         "Evaluate the predictions \\\\\n",
         "print(evaluator.evaluate(test_results))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1htp678qTXO0",
+        "colab_type": "text"
+      },
+      "source": [
+        "###**Big data foundation with PySpark**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RfhM27ueTJTd",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Course 1: Introduction to big data analysis in Spark**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "guiOE0fFThzC",
+        "colab_type": "text"
+      },
+      "source": [
+        "Print the version of SparkContext \\\\\n",
+        "print(\"The version of Spark Context in the PySpark shell is\", sc.version)\n",
+        "\n",
+        "Print the Python version of SparkContext \\\\\n",
+        "print(\"The Python version of Spark Context in the PySpark shell is\", sc.pythonVer)\n",
+        "\n",
+        "Print the master of SparkContext \\\\\n",
+        "print(\"The master of Spark Context in the PySpark shell is\", sc.master)\n",
+        "\n",
+        "Create a python list of numbers from 1 to 100 \\\\\n",
+        "numb = range(1, 100)\n",
+        "\n",
+        "Load the list into PySpark  \\\\\n",
+        "spark_data = sc.parallelize(numb)\n",
+        "\n",
+        "Load a local file into PySpark shell \\\\\n",
+        "lines = sc.textFile(file_path)\n",
+        "\n",
+        "**Use of lambda() with map():** \\\\\n",
+        "The map() function in Python returns a list of the results after applying the given function to each item of a given iterable (list, tuple etc.). The general syntax of map() function is map(fun, iter). We can also use lambda functions with map(). The general syntax of map() function with lambda() is map(lambda <agument>:<expression>, iter)\n",
+        "\n",
+        "Square all numbers in my_list \\\\\n",
+        "squared_list_lambda = list(map(lambda x: x ** 2, my_list))\n",
+        "\n",
+        "Print the result of the map function \\\\\n",
+        "print(\"The squared numbers are\", squared_list_lambda)\n",
+        "\n",
+        "**Use of lambda() with filter():** \\\\\n",
+        "Another function that is used extensively in Python is the filter() function. The filter() function in Python takes in a function and a list as arguments. The general syntax of the filter() function is filter(function, list_of_input). Similar to the map(), filter() can be used with lambda() function. The general syntax of the filter() function with lambda() is filter(lambda <argument>:<expression>, list)\n",
+        "\n",
+        "Filter numbers divisible by 10 \\\\\n",
+        "filtered_list = list(filter(lambda x: (x%10 == 0), my_list2))\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "j0sVpyzuY-sx",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Course 2: Programming in PySpark RDD’s**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Vz8xlWOwZBTM",
+        "colab_type": "text"
+      },
+      "source": [
+        "Create an RDD from a list of words \\\\\n",
+        "RDD = sc.parallelize([\"Spark\", \"is\", \"a\", \"framework\", \"for\", \"Big Data processing\"])\n",
+        "\n",
+        "Print out the type of the created object \\\\\n",
+        "print(\"The type of RDD is\", type(RDD))\n",
+        "\n",
+        "Create a fileRDD from file_path \\\\\n",
+        "fileRDD = sc.textFile(file_path)\n",
+        "\n",
+        "Create a fileRDD_part from file_path with 5 partitions \\\\\n",
+        "fileRDD_part = sc.textFile(file_path, minPartitions = 5)\n",
+        "\n",
+        "Check the number of partitions in fileRDD_part \\\\\n",
+        "print(\"Number of partitions in fileRDD_part is\", fileRDD_part.getNumPartitions())\n",
+        "\n",
+        "Create map() transformation to cube numbers \\\\\n",
+        "cubedRDD = numbRDD.map(lambda x: x ** 3)\n",
+        "\n",
+        "Collect the results \\\\\n",
+        "numbers_all = cubedRDD.collect()\n",
+        "\n",
+        "Print the numbers from numbers_all \\\\\n",
+        "for numb in numbers_all:\n",
+        "\tprint(numb)\n",
+        "\n",
+        "Filter the fileRDD to select lines with Spark keyword \\\\\n",
+        "fileRDD_filter = fileRDD.filter(lambda line: 'Spark' in line)\n",
+        "\n",
+        "How many lines are there in fileRDD? \\\\\n",
+        "print(\"The total number of lines with the keyword Spark is\", fileRDD_filter.count())\n",
+        "\n",
+        "Print the first four lines of fileRDD \\\\\n",
+        "for line in fileRDD_filter.take(4): \n",
+        "  print(line)"
       ]
     },
     {
