--- a/Big_Data_with_PySpark.ipynb
+++ b/Big_Data_with_PySpark.ipynb
@@ -6,7 +6,7 @@
       "name": "Big Data with PySpark.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPlXEkCpNg+Peh3icEumSEB",
+      "authorship_tag": "ABX9TyMq3VVHE8UavrBiaaDcqHMo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -337,8 +337,8 @@
         "Print out the type of the created object \\\\\n",
         "print(\"The type of RDD is\", type(RDD))\n",
         "\n",
-        "Create a fileRDD from file_path \\\\\n",
-        "fileRDD = sc.textFile(file_path)\n",
+        "**Create a fileRDD from file_path \\\\\n",
+        "fileRDD = sc.textFile(file_path)**\n",
         "\n",
         "Create a fileRDD_part from file_path with 5 partitions \\\\\n",
         "fileRDD_part = sc.textFile(file_path, minPartitions = 5)\n",
@@ -346,8 +346,8 @@
         "Check the number of partitions in fileRDD_part \\\\\n",
         "print(\"Number of partitions in fileRDD_part is\", fileRDD_part.getNumPartitions())\n",
         "\n",
-        "Create map() transformation to cube numbers \\\\\n",
-        "cubedRDD = numbRDD.map(lambda x: x ** 3)\n",
+        "**Create map() transformation to cube numbers \\\\\n",
+        "cubedRDD = numbRDD.map(lambda x: x ** 3)**\n",
         "\n",
         "Collect the results \\\\\n",
         "numbers_all = cubedRDD.collect()\n",
@@ -356,15 +356,40 @@
         "for numb in numbers_all:\n",
         "\tprint(numb)\n",
         "\n",
-        "Filter the fileRDD to select lines with Spark keyword \\\\\n",
-        "fileRDD_filter = fileRDD.filter(lambda line: 'Spark' in line)\n",
+        "**Filter the fileRDD to select lines with Spark keyword \\\\\n",
+        "fileRDD_filter = fileRDD.filter(lambda line: 'Spark' in line)**\n",
         "\n",
-        "How many lines are there in fileRDD? \\\\\n",
-        "print(\"The total number of lines with the keyword Spark is\", fileRDD_filter.count())\n",
+        "**How many lines are there in fileRDD? \\\\\n",
+        "print(\"The total number of lines with the keyword Spark is\", fileRDD_filter.count())**\n",
         "\n",
         "Print the first four lines of fileRDD \\\\\n",
         "for line in fileRDD_filter.take(4): \n",
-        "  print(line)"
+        "  print(line)\n",
+        "\n",
+        "Create PairRDD Rdd with key value pairs \\\\\n",
+        "Rdd = sc.parallelize([(1,2), (3,4), (3,6), (4,5)])\n",
+        "\n",
+        "**Apply reduceByKey() operation on Rdd \\\\\n",
+        "Rdd_Reduced = Rdd.reduceByKey(lambda x, y: x + y)**\n",
+        "\n",
+        "Iterate over the result and print the output \\\\\n",
+        "for num in Rdd_Reduced.collect(): \n",
+        "  print(\"Key {} has {} Counts\".format(num[0], num[1]))\n",
+        "\n",
+        ":Key 4 has 5 Counts\n",
+        "Key 1 has 2 Counts\n",
+        "Key 3 has 10 Counts\n",
+        "\n",
+        "**Sort the reduced RDD with the key by descending order \\\\\n",
+        "Rdd_Reduced_Sort = Rdd_Reduced.sortByKey(ascending=False)**\n",
+        "\n",
+        "Iterate over the result and print the output \\\\\n",
+        "for num in Rdd_Reduced_Sort.collect():\n",
+        "  print(\"Key {} has {} Counts\".format(num[0], num[1]))\n",
+        "\n",
+        ": Key 4 has 5 Counts\n",
+        "Key 3 has 10 Counts\n",
+        "Key 1 has 2 Counts"
       ]
     },
     {
@@ -397,11 +422,11 @@
       "metadata": {
         "id": "azoG2j7XNc8z",
         "colab_type": "code",
+        "outputId": "ddc07371-58c6-4c1e-f913-142195b1605d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 126
-        },
-        "outputId": "ddc07371-58c6-4c1e-f913-142195b1605d"
+        }
       },
       "source": [
         "# Point Colaboratory to your Google Drive\n",
@@ -409,7 +434,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
