--- a/Big_Data_with_PySpark.ipynb
+++ b/Big_Data_with_PySpark.ipynb
@@ -6,7 +6,7 @@
       "name": "Big Data with PySpark.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMU984ucuLDU5DGHo+ulwbh",
+      "authorship_tag": "ABX9TyOLLTyK30nr98oWG8Q8qa3R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -782,25 +782,25 @@
         "id": "m8eE3-S5elU4"
       },
       "source": [
-        "Show the distinct VOTER_NAME entries \\\\\n",
+        "**Show the distinct VOTER_NAME entries** \\\\\n",
         "`voter_df.select('VOTER_NAME').distinct().show(40, truncate=False)`\n",
         "\n",
         "Filter voter_df where the VOTER_NAME is 1-20 characters in length \\\\\n",
         "`voter_df = voter_df.filter('length(VOTER_NAME) > 0 and length(VOTER_NAME) < 20')`\n",
         "\n",
-        "Filter out voter_df where the VOTER_NAME contains an underscore \\\\\n",
+        "**Filter out voter_df where the VOTER_NAME contains an underscore** \\\\\n",
         "`voter_df = voter_df.filter(~ F.col('VOTER_NAME').contains('_'))`\n",
         "\n",
         "Show the distinct VOTER_NAME entries again \\\\\n",
         "`voter_df.select('VOTER_NAME').distinct().show(40, truncate=False)`\n",
         "\n",
-        "Add a new column called splits separated on whitespace \\\\\n",
+        "**Add a new column called splits separated on whitespace** \\\\\n",
         "`voter_df = voter_df.withColumn('splits', F.split(voter_df.VOTER_NAME, '\\s+'))`\n",
         "\n",
         "Create a new column called first_name based on the first item in splits \\\\\n",
         "`voter_df = voter_df.withColumn('first_name', voter_df.splits.getItem(0))`\n",
         "\n",
-        "Get the last entry of the splits list and create a column called last_name \\\\\n",
+        "**Get the last entry of the splits list and create a column called last_name** \\\\\n",
         "`voter_df = voter_df.withColumn('last_name', voter_df.splits.getItem(F.size('splits') - 1))`\n",
         "\n",
         "Drop the splits column \\\\\n",
@@ -810,7 +810,7 @@
         "`voter_df = voter_df.withColumn('random_val',\n",
         "                               when(voter_df.TITLE == 'Councilmember', F.rand()))`\n",
         "\n",
-        "Add a column to voter_df for a voter based on their position \\\\\n",
+        "**Add a column to voter_df for a voter based on their position** \\\\\n",
         "`voter_df = voter_df.withColumn('random_val',\n",
         "                               when(voter_df.TITLE == 'Councilmember', F.rand())\n",
         "                               .when(voter_df.TITLE == 'Mayor', 2)\n",
@@ -818,7 +818,192 @@
         "\n",
         "Use the .filter() clause with random_val \\\\\n",
         "`voter_df.filter(voter_df.random_val == 0).show()`\n",
+        "\n",
+        "Return a space separated string of names \\\\\n",
+        "`def getFirstAndMiddle(names):`\n",
+        "  `return ' '.join(names[:-1])`\n",
+        "\n",
+        "**Define the method as a UDF** \\\\\n",
+        "`udfFirstAndMiddle = F.udf(getFirstAndMiddle, StringType())`\n",
+        "\n",
+        "Create a new column using your UDF \\\\\n",
+        "`voter_df = voter_df.withColumn('first_and_middle_name', udfFirstAndMiddle(voter_df.splits))`\n",
+        "\n",
+        "Drop the unnecessary columns then show the DataFrame \\\\\n",
+        "`voter_df = voter_df.drop('first_name')`\n",
+        "`voter_df = voter_df.drop('splits')`\n",
+        "\n",
+        "Select all the unique council voters \\\\\n",
+        "`voter_df = df.select(df[\"VOTER NAME\"]).distinct()`\n",
+        "\n",
+        "Count the rows in voter_df \\\\\n",
+        "`print(\"\\nThere are %d rows in the voter_df DataFrame.\\n\" % voter_df.count())`\n",
+        "\n",
+        "Add a ROW_ID \\\\\n",
+        "`voter_df = voter_df.withColumn('ROW_ID', F.monotonically_increasing_id())`\n",
+        "\n",
+        "Show the rows with 10 highest IDs in the set \\\\\n",
+        "`voter_df.orderBy(voter_df.ROW_ID.desc()).show(10)`\n",
+        "\n",
+        "**Print the number of partitions in each DataFrame** \\\\\n",
+        "`print(\"\\nThere are %d partitions in the voter_df DataFrame.\\n\" % voter_df.rdd.getNumPartitions())`\n",
+        "`print(\"\\nThere are %d partitions in the voter_df_single DataFrame.\\n\" % voter_df_single.rdd.getNumPartitions())`\n",
+        "\n",
+        "**Add a ROW_ID field to each DataFrame** \\\\\n",
+        "`voter_df = voter_df.withColumn('ROW_ID', F.monotonically_increasing_id())`\n",
+        "`voter_df_single = voter_df_single.withColumn('ROW_ID', F.monotonically_increasing_id())`\n",
+        "\n",
+        "Show the top 10 IDs in each DataFrame  \\\\\n",
+        "`voter_df.orderBy(voter_df.ROW_ID.desc()).show(10)`\n",
+        "`voter_df_single.orderBy(voter_df_single.ROW_ID.desc()).show(10)`\n",
+        "\n",
+        "Determine the highest ROW_ID and save it in previous_max_ID \\\\\n",
+        "`previous_max_ID = voter_df_march.select('ROW_ID').rdd.max()[0]`\n",
+        "\n",
+        "Add a ROW_ID column to voter_df_april starting at the desired value \\\\\n",
+        "`voter_df_april = voter_df_april.withColumn('ROW_ID', previous_max_ID + F.monotonically_increasing_id())`\n",
+        "\n",
+        "Show the ROW_ID from both DataFrames and compare \\\\\n",
+        "`voter_df_april.select('ROW_ID').show()`\n",
+        "`voter_df_march.select('ROW_ID').show()`\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p64P4O5wym9k",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Course 3:Improving Performance**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vz50QmYGyp3S",
+        "colab_type": "text"
+      },
+      "source": [
+        "Add caching to the unique rows in departures_df \\\\\n",
+        "`departures_df = departures_df.distinct().cache()`\n",
+        "\n",
+        "Remove departures_df from the cache \\\\\n",
+        "`departures_df.unpersist()`\n",
+        "\n",
+        "Check the cache status again \\\\\n",
+        "`print(\"Is departures_df cached?: %s\" % departures_df.is_cached)`\n",
+        "\n",
+        "Import the full and split files into DataFrames \\\\\n",
+        "`full_df = spark.read.csv('departures_full.txt.gz')`\n",
+        "\n",
+        "`split_df = spark.read.csv('departures_*.txt.gz')`\n",
+        "\n",
+        "Name of the Spark application instance \\\\\n",
+        "`app_name = spark.conf.get('spark.app.name')`\n",
+        "\n",
+        "Driver TCP port \\\\\n",
+        "`driver_tcp_port = spark.conf.get('spark.driver.port')`\n",
+        "\n",
+        "Number of join partitions \\\\\n",
+        "`num_partitions = spark.conf.get('spark.sql.shuffle.partitions')`\n",
+        "\n",
+        "Show the results \\\\\n",
+        "`print(\"Name: %s\" % app_name)`\n",
+        "\n",
+        "`print(\"Driver TCP port: %s\" % driver_tcp_port)`\n",
+        "\n",
+        "`print(\"Number of partitions: %s\" % num_partitions)`\n",
+        "\n",
+        "Configure Spark to use 500 partitions \\\\\n",
+        "`spark.conf.set('spark.sql.shuffle.partitions', 500)`\n",
+        "\n",
+        "Import the broadcast method from pyspark.sql.functions \\\\\n",
+        "`from pyspark.sql.functions import broadcast`\n",
+        "\n",
+        "Join the flights_df and airports_df DataFrames using broadcasting \\\\\n",
+        "`broadcast_df = flights_df.join(broadcast(airports_df), \\\n",
+        "    flights_df[\"Destination Airport\"] == airports_df[\"IATA\"] )`\n",
+        "\n",
+        "Show the query plan and compare against the original \\\\\n",
+        "`broadcast_df.explain()`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v_THHJat8x99",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Course 4: Complex processing and data pipelines**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WKp5_v3p80D1",
+        "colab_type": "text"
+      },
+      "source": [
+        "Import the data to a DataFrame \\\\\n",
+        "`departures_df = spark.read.csv('2015-departures.csv.gz', header=True)`\n",
+        "\n",
+        "Remove any duration of 0 \\\\\n",
+        "`departures_df = departures_df.filter(departures_df[3] >0)`\n",
+        "\n",
+        "Add an ID column \\\\\n",
+        "`departures_df = departures_df.withColumn('id', F.monotonically_increasing_id())`\n",
+        "\n",
+        "Write the file out to JSON format \\\\\n",
+        "`departures_df.write.json('output.json')`\n",
+        "\n",
+        "Import the file to a DataFrame and perform a row count \\\\ \n",
+        "`annotations_df = spark.read.csv('annotations.csv.gz', sep='|')`\n",
+        "\n",
+        "`full_count = annotations_df.count()`\n",
+        "\n",
+        "Count the number of rows beginning with '#' \\\\\n",
+        "`comment_count = annotations_df.where(col('_c0').startswith('#')).count()`\n",
+        "\n",
+        "Import the file to a new DataFrame, without commented rows \\\\\n",
+        "`no_comments_df = spark.read.csv('annotations.csv.gz', sep='|', comment='#')`\n",
+        "\n",
+        "Count the new DataFrame and verify the difference is as expected \\\\\n",
+        "`no_comments_count = no_comments_df.count()`\n",
+        "\n",
+        "`print(\"Full count: %d\\nComment count: %d\\nRemaining count: %d\" % (full_count, comment_count, no_comments_count))`\n",
+        "\n",
+        "Import the file to a DataFrame and perform a row count \\\\\n",
+        "`annotations_df = spark.read.csv('annotations.csv.gz', sep='|')`\n",
+        "\n",
+        "`full_count = annotations_df.count()`\n",
+        "\n",
+        "Count the number of rows beginning with '#' \\\\\n",
+        "`comment_count = annotations_df.where(col('_c0').startswith('#')).count()`\n",
+        "\n",
+        "**Import the file to a new DataFrame, without commented rows** \\\\\n",
+        "`no_comments_df = spark.read.csv('annotations.csv.gz', sep='|', comment='#')`\n",
+        "\n",
+        "Count the new DataFrame and verify the difference is as expected \\\\\n",
+        "`no_comments_count = no_comments_df.count()`\n",
+        "\n",
+        "`print(\"Full count: %d\\nComment count: %d\\nRemaining count: %d\" % (full_count, comment_count, no_comments_count))`\n",
+        "\n",
+        "Split _c0 on the tab character and store the list in a variable \\\\\n",
+        "`tmp_fields = F.split(annotations_df['_c0'], '\\t')`\n",
+        "\n",
+        "Create the colcount column on the DataFrame \\\\\n",
+        "`annotations_df = annotations_df.withColumn('colcount', F.size(tmp_fields))`\n",
+        "\n",
+        "Remove any rows containing fewer than 5 fields \\\\\n",
+        "`annotations_df_filtered = annotations_df.filter(~ (annotations_df.colcount < 5))`\n",
+        "\n",
+        "Count the number of rows \\\\\n",
+        "`final_count = annotations_df_filtered.count()`\n",
+        "\n",
+        "`print(\"Initial count: %d\\nFinal count: %d\" % (initial_count, final_count))`\n"
       ]
     },
     {
